--- a/Web development practice/practice_rafting_ai.html
+++ b/Web development practice/practice_rafting_ai.html
@@ -7,8 +7,8 @@
     <title>Adventure Rafting Tours</title>
     <meta name="description" content="Adebimpe's practice rafting website">
     <meta name="author" content="Adebimpe Aderoju rafting website">
-    <link rel="stylesheet" href="practice_rafting.css" />
-    <script defer src="practice_rafting.js"></script>
+    <link rel="stylesheet" href="styles/practice_rafting.css" />
+    <script defer src="scripts/practice_rafting.js"></script>
 </head>
 
 <body>
